# jamctl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.run/: Update config file.run.xml  jamd.run.xml
docs/Writerside/: jpa.tree
docs/Writerside/topics/: reference.md
jamctl/: CMakeLists.txt  main.cpp  vcpkg.json
jamd/: CMakeLists.txt  Doxyfile  config.json  config.yaml  jamd.yaml  main.cpp  vcpkg.json
jamd/config/: test.yaml  test1.yaml
jamd/controllers/: Instances.cpp  Instances.h  System.cpp  System.h  User.cpp  User.h
jamd/docs/: conf.py  index.rst
jamd/ext/: alias.h  autoSerialization.h  concepts.h  extFuns.h  file.h  jsonSerialization.h  marcos.h  match.h  styledORM.h  tomlSerialization.h  yamlSerialization.h
jamd/ext/marcos/: drogon.h  ktstyle.h  orm.h
jamd/models/: Instances.cc  Instances.h  Users.cc  Users.h  model.json
jamd/modules/: PasswordHasher.h
jamd/modules/backup/: backup.cpp  backup.h
jamd/modules/grpc/: GrpcServer.cpp  GrpcServer.h  JamdManageService.cpp  JamdManageService.h  LaunchService.cpp  LaunchService.h
jamd/modules/grpc/proto/: launch.proto  system.proto
jamd/modules/manager/ConfigFileManager/: ConfigFileManager.cpp  ConfigFileManager.h
jamd/modules/manager/InstanceManager/: ConfigObj.cpp  InstanceManager.cpp  InstanceManager.h  SingleServer.hpp
jamd/modules/parser/: StdoutParser.h  vanilla.h
jamd/modules/parser/interfaces/: ILogParser.h
jamd/modules/preset/: presets.h
jamd/modules/search_java/: search_java.cpp  search_java.h
jamd/modules/tmsmt/: CMakeLists.txt  SingleServer.cpp  SingleServer.hpp
jamd/plugins/autoAddHeaders/: AutoAddHeaders.cpp  AutoAddHeaders.h
jamd/plugins/checkFeatureEnabled/: CheckFeatureEnabled.cpp  CheckFeatureEnabled.h
jamd/plugins/log/: RequestLogger.cpp  RequestLogger.h
jamd/scripts/database/: create_instances.sql  create_user.sql
jamd/structs/: api.h  config.h
jamd/structs/api/: GeneralAPIResult.h  LaunchResult.h  RegisterInfo.h
jamd/structs/config/: JamdConfig.h  ServerConfig.h
jamd/utils/: Singleton.h
